--- a/app/src/_/jade/baseStyle.jade
+++ b/app/src/_/jade/baseStyle.jade
@@ -1,5 +1,5 @@
-//- - var complie = htmlWebpackPlugin.options.globalConfig
-//- - var src = complie.cdn || '/plugins/'
-//- - var map = complie.baseStyle || []
-//- each item in map
-//-     link(rel="stylesheet",href=src+item)
+- var complie = htmlWebpackPlugin.options.globalConfig
+- var src = '../../plugins/'
+- var map = complie.baseStyle || []
+each item in map
+    link(rel="stylesheet",href=src+item)
